erDiagram
    energy_daily {
        INT id PK
        VARCHAR factory UK
        DATE date UK
        DOUBLE freezing_power_kwh
        DOUBLE air_compressor_kwh
        DOUBLE total_power_kwh
        DOUBLE fuel_nm3
        DOUBLE water_ton
        DOUBLE wastewater_ton
        DOUBLE mix_prod_kg
        DOUBLE power_per_ton_kwh
        DOUBLE fuel_per_ton_nm3
        DOUBLE water_per_ton_ton
        DATETIME created_at
        DATETIME updated_at
        TEXT changed_by
    }

    energy_daily_audit {
        INT id PK
        VARCHAR factory
        DATE date
        VARCHAR column_name
        TEXT old_value
        TEXT new_value
        VARCHAR change_type
        DATETIME changed_at
        TEXT changed_by
    }

    upload_batch {
        INT id PK
        VARCHAR filename
        DATETIME uploaded_at
        TEXT uploaded_by
        INT record_count
        VARCHAR status
        TEXT error_message
    }

    ai_reports {
        INT id PK
        VARCHAR factory UK
        INT report_year UK
        INT report_month UK
        MEDIUMTEXT report_content
        DATETIME created_at
        DATETIME updated_at
    }

    prediction_log {
        INT id PK
        VARCHAR factory UK
        DATE pred_date UK
        VARCHAR target UK
        DOUBLE pred_value
        DOUBLE pred_p05
        DOUBLE pred_p95
        DOUBLE actual_value
        DOUBLE mape
        VARCHAR band_status
        DOUBLE band_position
        DOUBLE mix_prod_kg
        VARCHAR model_path
        DATETIME created_at
        DATETIME updated_at
    }

    production_daily {
        INT id PK
        DATE date UK
        VARCHAR item_code UK
        VARCHAR item_name
        VARCHAR factory UK
        VARCHAR category1
        VARCHAR category2
        DOUBLE planned_qty
        DOUBLE actual_qty
        DATETIME created_at
        DATETIME updated_at
    }

    anomaly_analysis {
        INT id PK
        VARCHAR factory UK
        DATE pred_date UK
        VARCHAR target UK
        DOUBLE pred_value
        DOUBLE pred_p05
        DOUBLE pred_p95
        DOUBLE actual_value
        DOUBLE mape
        VARCHAR band_status
        DOUBLE band_position
        MEDIUMTEXT diagnosis
        MEDIUMTEXT context_snapshot
        VARCHAR model_used
        DATETIME created_at
        DATETIME updated_at
    }

    savings_target {
        INT id PK
        VARCHAR factory UK
        INT year UK
        VARCHAR metric UK
        DOUBLE target_pct
        TEXT note
        DATETIME created_at
        DATETIME updated_at
        TEXT changed_by
    }

    event_annotation {
        INT id PK
        VARCHAR factory
        DATE event_date
        VARCHAR target
        VARCHAR tag
        VARCHAR severity
        TEXT note
        DATETIME created_at
        DATETIME updated_at
        TEXT created_by
    }

    upload_batch ||--o{ energy_daily : upserts
    upload_batch ||--o{ energy_daily_audit : records
    energy_daily o|--o{ energy_daily_audit : factory_date
    energy_daily o|--o{ prediction_log : actual_lookup
    prediction_log ||--o| anomaly_analysis : diagnosis_cache
    energy_daily o|--o{ anomaly_analysis : diagnosis_context
    energy_daily o|--o{ production_daily : date_factory_map
    ai_reports o|--o{ energy_daily : monthly_rollup
    savings_target o|--o{ energy_daily : yearly_kpi
    event_annotation }o--o| energy_daily : event_overlay
